external-crates/move/crates/move-compiler/tests/move_2024/typing/signed_int_nested_struct.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_2024/typing/signed_int_nested_struct.move:5:5
  │
5 │     struct Point has copy, drop {
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01003]: invalid modifier
   ┌─ tests/move_2024/typing/signed_int_nested_struct.move:10:5
   │
10 │     struct Rect has copy, drop {
   │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
   │
   = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.
